--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89753,7 +89753,8 @@ p {
   border-radius: 1.25rem;
   font-weight: bold;
   transition: all 0.2s;
-  white-space: nowrap; }
+  white-space: nowrap;
+  cursor: pointer; }
 
 /* */
 /* CONTAINERS */
@@ -90074,6 +90075,14 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.form_order-design {
+  background-position: center center;
+  background-size: cover;
+  background-image: url("../img/backgrounds/form_order-design.jpg"); }
+
+/* */
+/* CONTAINERS */
+/* */
 /* */
 /* CONTAINERS */
 /* */
@@ -90133,14 +90142,6 @@ p {
   @media (min-width: 1200px) {
     .bg-pricing-card--premium {
       background-image: url("../img/backgrounds/pricing-cards/premium_xl@1.jpg"); } }
-
-/* */
-/* CONTAINERS */
-/* */
-.form_order-design {
-  background-position: center center;
-  background-size: cover;
-  background-image: url("../img/backgrounds/form_order-design.jpg"); }
 
 /* */
 /* CONTAINERS */
@@ -90679,42 +90680,6 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.b-radius-1 {
-  border-radius: 1px; }
-
-.b-radius-2 {
-  border-radius: 2px; }
-
-.b-radius-3 {
-  border-radius: 3px; }
-
-.b-radius-4 {
-  border-radius: 4px; }
-
-.b-radius-5 {
-  border-radius: 5px; }
-
-.b-radius-6 {
-  border-radius: 6px; }
-
-.b-radius-7 {
-  border-radius: 7px; }
-
-.b-radius-8 {
-  border-radius: 8px; }
-
-.b-radius-9 {
-  border-radius: 9px; }
-
-.b-radius-10 {
-  border-radius: 10px; }
-
-.b-radius-round {
-  border-radius: 50%; }
-
-/* */
-/* CONTAINERS */
-/* */
 .shadow-xs {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05); }
 
@@ -91183,6 +91148,42 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:shadow-2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); } }
+
+/* */
+/* CONTAINERS */
+/* */
+.b-radius-1 {
+  border-radius: 1px; }
+
+.b-radius-2 {
+  border-radius: 2px; }
+
+.b-radius-3 {
+  border-radius: 3px; }
+
+.b-radius-4 {
+  border-radius: 4px; }
+
+.b-radius-5 {
+  border-radius: 5px; }
+
+.b-radius-6 {
+  border-radius: 6px; }
+
+.b-radius-7 {
+  border-radius: 7px; }
+
+.b-radius-8 {
+  border-radius: 8px; }
+
+.b-radius-9 {
+  border-radius: 9px; }
+
+.b-radius-10 {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
