--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89759,6 +89759,17 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.header--sticky {
+  height: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
+  background: #3E4345;
+  position: fixed;
+  top: 0; }
+
+/* */
+/* CONTAINERS */
+/* */
 @media (min-width: 1200px) {
   .header-nav-dropdown-menu {
     top: calc(100% + 16px); }
@@ -90680,6 +90691,42 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.b-radius-1 {
+  border-radius: 1px; }
+
+.b-radius-2 {
+  border-radius: 2px; }
+
+.b-radius-3 {
+  border-radius: 3px; }
+
+.b-radius-4 {
+  border-radius: 4px; }
+
+.b-radius-5 {
+  border-radius: 5px; }
+
+.b-radius-6 {
+  border-radius: 6px; }
+
+.b-radius-7 {
+  border-radius: 7px; }
+
+.b-radius-8 {
+  border-radius: 8px; }
+
+.b-radius-9 {
+  border-radius: 9px; }
+
+.b-radius-10 {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
+
+/* */
+/* CONTAINERS */
+/* */
 .shadow-xs {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05); }
 
@@ -91148,42 +91195,6 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:shadow-2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); } }
-
-/* */
-/* CONTAINERS */
-/* */
-.b-radius-1 {
-  border-radius: 1px; }
-
-.b-radius-2 {
-  border-radius: 2px; }
-
-.b-radius-3 {
-  border-radius: 3px; }
-
-.b-radius-4 {
-  border-radius: 4px; }
-
-.b-radius-5 {
-  border-radius: 5px; }
-
-.b-radius-6 {
-  border-radius: 6px; }
-
-.b-radius-7 {
-  border-radius: 7px; }
-
-.b-radius-8 {
-  border-radius: 8px; }
-
-.b-radius-9 {
-  border-radius: 9px; }
-
-.b-radius-10 {
-  border-radius: 10px; }
-
-.b-radius-round {
-  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
