--- a/resources/sass/frontend/project/header/header--sticky.sass
+++ b/resources/sass/frontend/project/header/header--sticky.sass
@@ -1,9 +1,9 @@
 @import "../../../bootstrap"
 
 .header--sticky
-    height: 60px
-    padding-top: 0
-    padding-bottom: 0
+    height: 60px !important
+    padding-top: 0 !important
+    padding-bottom: 0 !important
     background: $grey-90
-    position: fixed
+    position: fixed !important
     top: 0
