изменен эффект наведения у button-white-solid

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89740,7 +89740,7 @@ input {
   background-color: #fff;
   color: #151A1C; }
   .button-white-solid:hover {
-    background-color: #F1F3F4; }
+    background-color: #e8e8e8; }
 
 /* */
 /* CONTAINERS */
