--- a/resources/sass/frontend/project/effects/hover-translate-up.sass
+++ b/resources/sass/frontend/project/effects/hover-translate-up.sass
@@ -1,6 +1,6 @@
 @import "../../../bootstrap"
 
-.hover-translate-up
++breakpoints(hover-translate-up)
     display: inline-block
     transition: all $duration_fast
 
