--- a/resources/sass/frontend/base.sass
+++ b/resources/sass/frontend/base.sass
@@ -18,7 +18,7 @@ a
 a, a[href^="tel:"], a[href^="mailto:"], button
     cursor: pointer !important
     color: inherit
-    text-decoration: none
+    text-decoration: underline
 
 
 img
