Установлен !important в text-decoration
Чтобы перезаписать стил у дефолных ссылок

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89466,205 +89466,205 @@ input {
 /* CONTAINERS */
 /* */
 .underline {
-  text-decoration: underline; }
+  text-decoration: underline !important; }
 
 @media (max-width: 374px) {
   .xs\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 1200px) {
   .xl\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 1366px) {
   .xl2\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 1440px) {
   .xl3\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (max-width: 767px) {
   .xs-sm\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (max-width: 1019px) {
   .xs-md\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (max-width: 1199px) {
   .xs-lg\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 375px) {
   .sm-xl\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 768px) {
   .md-xl\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 1020px) {
   .lg-xl\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 375px) and (max-width: 767px) {
   .sm\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 768px) and (max-width: 1019px) {
   .md\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 1020px) and (max-width: 1199px) {
   .lg\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 375px) and (max-width: 1019px) {
   .sm-md\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 375px) and (max-width: 1199px) {
   .sm-lg\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:underline {
-    text-decoration: underline; } }
+    text-decoration: underline !important; } }
 
 .no-underline {
-  text-decoration: none; }
+  text-decoration: none !important; }
 
 @media (max-width: 374px) {
   .xs\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 1200px) {
   .xl\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 1366px) {
   .xl2\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 1440px) {
   .xl3\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (max-width: 767px) {
   .xs-sm\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (max-width: 1019px) {
   .xs-md\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (max-width: 1199px) {
   .xs-lg\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 375px) {
   .sm-xl\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 768px) {
   .md-xl\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 1020px) {
   .lg-xl\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 375px) and (max-width: 767px) {
   .sm\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 768px) and (max-width: 1019px) {
   .md\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 1020px) and (max-width: 1199px) {
   .lg\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 375px) and (max-width: 1019px) {
   .sm-md\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 375px) and (max-width: 1199px) {
   .sm-lg\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:no-underline {
-    text-decoration: none; } }
+    text-decoration: none !important; } }
 
 .line-through {
-  text-decoration: line-through; }
+  text-decoration: line-through !important; }
 
 @media (max-width: 374px) {
   .xs\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 1200px) {
   .xl\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 1366px) {
   .xl2\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 1440px) {
   .xl3\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (max-width: 767px) {
   .xs-sm\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (max-width: 1019px) {
   .xs-md\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (max-width: 1199px) {
   .xs-lg\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 375px) {
   .sm-xl\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 768px) {
   .md-xl\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 1020px) {
   .lg-xl\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 375px) and (max-width: 767px) {
   .sm\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 768px) and (max-width: 1019px) {
   .md\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 1020px) and (max-width: 1199px) {
   .lg\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 375px) and (max-width: 1019px) {
   .sm-md\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 375px) and (max-width: 1199px) {
   .sm-lg\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:line-through {
-    text-decoration: line-through; } }
+    text-decoration: line-through !important; } }
 
 /* */
 /* CONTAINERS */
@@ -89729,6 +89729,21 @@ input {
 /* */
 /* CONTAINERS */
 /* */
+.b-radius-0 {
+  border-radius: 0; }
+
+.b-radius-sm {
+  border-radius: 3px; }
+
+.b-radius-base {
+  border-radius: 5px; }
+
+.b-radius-xl {
+  border-radius: 10px; }
+
+/* */
+/* CONTAINERS */
+/* */
 .breadcrumbs-arrow {
   font-size: 0.7em; }
 
@@ -89782,21 +89797,6 @@ input {
   white-space: nowrap;
   cursor: pointer;
   text-decoration: none; }
-
-/* */
-/* CONTAINERS */
-/* */
-.b-radius-0 {
-  border-radius: 0; }
-
-.b-radius-sm {
-  border-radius: 3px; }
-
-.b-radius-base {
-  border-radius: 5px; }
-
-.b-radius-xl {
-  border-radius: 10px; }
 
 /* */
 /* CONTAINERS */
