--- a/resources/sass/frontend/framework/typography/text-decoration.sass
+++ b/resources/sass/frontend/framework/typography/text-decoration.sass
@@ -2,4 +2,4 @@
 
 @each $name, $decor in (underline, underline), (no-underline, none), (line-through, line-through)
     +breakpoints(#{$name})
-        text-decoration: #{$decor}
+        text-decoration: #{$decor} !important
