добавлена страница с Договором-офертой

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89666,44 +89666,6 @@ input {
 /* */
 /* CONTAINERS */
 /* */
-.article {
-  font-family: Montserrat, sans-serif;
-  max-width: 48em;
-  line-height: 1.7; }
-  .article h1 {
-    line-height: 1.1; }
-    @media (max-width: 767px) {
-      .article h1 {
-        font-size: 1.625em; } }
-    @media (min-width: 768px) {
-      .article h1 {
-        font-size: 2.4375em; } }
-  .article h2 {
-    font-weight: 700;
-    margin-top: 2em;
-    margin-bottom: .77419355em;
-    line-height: 1.2; }
-    @media (max-width: 767px) {
-      .article h2 {
-        font-size: 1.4375em; } }
-    @media (min-width: 768px) {
-      .article h2 {
-        font-size: 1.9375em; } }
-  .article p {
-    margin-bottom: 1.7em;
-    line-height: inherit; }
-  .article ol, .article ul {
-    margin-top: 1.5em;
-    margin-bottom: 2em; }
-  .article li {
-    padding-left: 1em;
-    margin-top: .7em;
-    margin-bottom: .7em;
-    margin-left: 1.25em; }
-
-/* */
-/* CONTAINERS */
-/* */
 @-webkit-keyframes arrow {
   0% {
     transform: translateY(0); }
@@ -89737,6 +89699,45 @@ input {
 
 .b-radius-xl {
   border-radius: 10px; }
+
+/* */
+/* CONTAINERS */
+/* */
+.article {
+  font-family: Montserrat, sans-serif;
+  max-width: 48em;
+  line-height: 1.7; }
+  .article h1 {
+    line-height: 1.1; }
+    @media (max-width: 767px) {
+      .article h1 {
+        font-size: 1.625em; } }
+    @media (min-width: 768px) {
+      .article h1 {
+        font-size: 2.4375em; } }
+  .article h2 {
+    font-weight: 700;
+    margin-bottom: .77419355em;
+    line-height: 1.2; }
+    @media (max-width: 767px) {
+      .article h2 {
+        font-size: 1.4375em; } }
+    @media (min-width: 768px) {
+      .article h2 {
+        font-size: 1.9375em; } }
+  .article .article-body, .article h2 {
+    margin-top: 2em; }
+  .article p {
+    margin-bottom: 1.7em;
+    line-height: inherit; }
+  .article ol, .article ul {
+    margin-top: 1.5em;
+    margin-bottom: 2em; }
+  .article li {
+    padding-left: 1em;
+    margin-top: .7em;
+    margin-bottom: .7em;
+    margin-left: 1.25em; }
 
 /* */
 /* CONTAINERS */
