--- a/resources/sass/frontend/project/article/article.sass
+++ b/resources/sass/frontend/project/article/article.sass
@@ -18,7 +18,6 @@
 
     h2
         font-weight: 700
-        margin-top: 2em
         margin-bottom: .77419355em
         line-height: 1.2
 
@@ -27,6 +26,10 @@
 
         @media ($breakpoint_md)
             font-size: 1.9375em
+
+
+    .article-body, h2
+        margin-top: 2em
 
 
     p
