--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -84,6 +84,9 @@ p {
 input {
   color: inherit; }
 
+b {
+  font-weight: bolder; }
+
 /* */
 /* CONTAINERS */
 /* */
@@ -85090,6 +85093,28 @@ input {
 /* */
 /* CONTAINERS */
 /* */
+@-webkit-keyframes arrow {
+  0% {
+    transform: translateY(0); }
+  50% {
+    transform: translateY(20px); }
+  100% {
+    transform: translateY(0); } }
+@keyframes arrow {
+  0% {
+    transform: translateY(0); }
+  50% {
+    transform: translateY(20px); }
+  100% {
+    transform: translateY(0); } }
+
+.anim--arrow-down {
+  -webkit-animation: arrow 3s infinite ease-in-out;
+          animation: arrow 3s infinite ease-in-out; }
+
+/* */
+/* CONTAINERS */
+/* */
 .text-xs {
   font-size: 0.75rem; }
 
@@ -89666,43 +89691,6 @@ input {
 /* */
 /* CONTAINERS */
 /* */
-@-webkit-keyframes arrow {
-  0% {
-    transform: translateY(0); }
-  50% {
-    transform: translateY(20px); }
-  100% {
-    transform: translateY(0); } }
-@keyframes arrow {
-  0% {
-    transform: translateY(0); }
-  50% {
-    transform: translateY(20px); }
-  100% {
-    transform: translateY(0); } }
-
-.anim--arrow-down {
-  -webkit-animation: arrow 3s infinite ease-in-out;
-          animation: arrow 3s infinite ease-in-out; }
-
-/* */
-/* CONTAINERS */
-/* */
-.b-radius-0 {
-  border-radius: 0; }
-
-.b-radius-sm {
-  border-radius: 3px; }
-
-.b-radius-base {
-  border-radius: 5px; }
-
-.b-radius-xl {
-  border-radius: 10px; }
-
-/* */
-/* CONTAINERS */
-/* */
 .article {
   font-family: Montserrat, sans-serif;
   max-width: 48em;
@@ -89738,6 +89726,21 @@ input {
     margin-top: .7em;
     margin-bottom: .7em;
     margin-left: 1.25em; }
+
+/* */
+/* CONTAINERS */
+/* */
+.b-radius-0 {
+  border-radius: 0; }
+
+.b-radius-sm {
+  border-radius: 3px; }
+
+.b-radius-base {
+  border-radius: 5px; }
+
+.b-radius-xl {
+  border-radius: 10px; }
 
 /* */
 /* CONTAINERS */
@@ -90864,42 +90867,6 @@ input {
 /* */
 /* CONTAINERS */
 /* */
-.b-radius-1 {
-  border-radius: 1px; }
-
-.b-radius-2 {
-  border-radius: 2px; }
-
-.b-radius-3 {
-  border-radius: 3px; }
-
-.b-radius-4 {
-  border-radius: 4px; }
-
-.b-radius-5 {
-  border-radius: 5px; }
-
-.b-radius-6 {
-  border-radius: 6px; }
-
-.b-radius-7 {
-  border-radius: 7px; }
-
-.b-radius-8 {
-  border-radius: 8px; }
-
-.b-radius-9 {
-  border-radius: 9px; }
-
-.b-radius-10 {
-  border-radius: 10px; }
-
-.b-radius-round {
-  border-radius: 50%; }
-
-/* */
-/* CONTAINERS */
-/* */
 .shadow-xs {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05); }
 
@@ -91368,6 +91335,42 @@ input {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:shadow-2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); } }
+
+/* */
+/* CONTAINERS */
+/* */
+.b-radius-1 {
+  border-radius: 1px; }
+
+.b-radius-2 {
+  border-radius: 2px; }
+
+.b-radius-3 {
+  border-radius: 3px; }
+
+.b-radius-4 {
+  border-radius: 4px; }
+
+.b-radius-5 {
+  border-radius: 5px; }
+
+.b-radius-6 {
+  border-radius: 6px; }
+
+.b-radius-7 {
+  border-radius: 7px; }
+
+.b-radius-8 {
+  border-radius: 8px; }
+
+.b-radius-9 {
+  border-radius: 9px; }
+
+.b-radius-10 {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
