--- a/resources/sass/frontend/_colors.scss
+++ b/resources/sass/frontend/_colors.scss
@@ -4,6 +4,7 @@ $grey-90: #3E4345;
 $grey-80: #5E6366;
 $grey-30: #babec0;
 $grey-20: #F1F3F4;
+$golden-110: #E0AF6D;
 $golden-100: #EFB458;
 $golden-90: #ECBA78;
 $golden-60: #F4D5AC;
